# super-wallet

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  PLAN.md  README.md  SKILL.md  TODO.md  alembic.ini  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
.agents/: mcp.json
alembic/: env.py
alembic/versions/: 2f863e7ce954_create_wallets_transactions_ledger_.py
app/: main.py
app/core/: audit.py  config.py  database.py  dependencies.py  outbox.py  security.py
app/fiat/: repository.py  router.py  schemas.py  service.py
app/notifications/: templates.py  worker.py
app/notifications/handlers/: email_handler.py
app/notifications/providers/: email_provider.py
app/users/: dependencies.py  exception.py  exception_handlers.py  repository.py  router.py  schemas.py  security.py  service.py
app/users/router/: auth.py  profile.py  session_auth.py
app/users/schemas/: auth.py  profile.py  session_auth.py
app/users/services/: auth.py  profile.py  session_auth.py
migrations/: env.py
migrations/versions/: 0c8b4bad93cb_add_email_verified_to_users.py  2f7aa7f357e9_set_verification_tokens_id_default.py  3650d9f0f918_create_verification_tokens_table.py  3f90933d8b8e_add_auth_session_tables.py  72f842f79d39_create_users_table.py  78e1d7555d97_add_auth_security_fields_and_audit_logs.py  7d6ecb555e4c_add_is_active_and_deleted_at_to_users.py  80aa87a13169_create_fiat_tables.py  e8a4231dff8a_add_cards_table.py  e9f2c9cad5d9_create_outbox_events_table.py
