[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super-wallet"
version = "0.1.0"
description = "Super Wallet Backend API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "asyncpg",
    "pyotp",
    "watchfiles"
]