[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super-wallet"
version = "0.1.0"
description = "Super Wallet Backend API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "asyncpg",
    "pyotp",
    "watchfiles"
]

[tool.setuptools]
packages = ["app"]

[project.scripts]
start = "uvicorn.main:main"

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 8000