[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super-wallet"
version = "0.1.0"
description = "Super Wallet Backend API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
aiosmtplib==5.1.2
alembic==1.14.0
amqp==5.3.1
annotated-types==0.7.0
anyio==4.14.2
argon2-cffi==25.1.0
argon2-cffi-bindings==25.1.0
asyncpg==0.30.0
billiard==4.2.4
celery==5.4.0
cffi==2.1.0
click==8.4.2
click-didyoumean==0.3.1
click-plugins==1.1.1.2
click-repl==0.3.0
cryptography==49.0.0
dnspython==2.8.0
email-validator==2.3.0
fastapi==0.115.6
greenlet==3.5.3
h11==0.16.0
httptools==0.8.0
idna==3.18
kombu==5.6.2
Mako==1.3.12
MarkupSafe==3.0.3
packaging==26.2
passlib==1.7.4
prompt_toolkit==3.0.52
psycopg2-binary==2.9.10
pycparser==3.0
pydantic==2.10.4
pydantic-settings==2.7.0
pydantic_core==2.27.2
PyOTP==2.10.0
python-dateutil==2.9.0.post0
python-dotenv==1.0.1
PyYAML==6.0.3
redis==5.2.1
six==1.17.0
sniffio==1.3.1
SQLAlchemy==2.0.51
starlette==0.41.3
typing_extensions==4.16.0
tzdata==2026.3
uvicorn==0.34.0
uvloop==0.22.1
vine==5.1.0
watchfiles==1.2.0
wcwidth==0.8.2
websockets==16.1

]

[tool.setuptools]
packages = ["app"]

[project.scripts]
start = "uvicorn.main:main"

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 8000